# MCPAITFCLI

./: .env.example  .gitignore  DesignPlan.md  README.md  pyproject.toml
docs/: http-mcp-server.md
src/mcp_paper_agent/: __init__.py  config.py  logger.py
src/mcp_paper_agent/agents/: __init__.py  generator.py  reflector.py  retriever.py  revisor.py
src/mcp_paper_agent/cli/: __init__.py  main.py  shell.py  styles.py
src/mcp_paper_agent/core/: __init__.py  citation_checker.py  evidence.py  format_checker.py  orchestrator.py
src/mcp_paper_agent/mcp/: __init__.py  client.py  tools.py
src/mcp_paper_agent/mcp_server/: __init__.py  search_backend.py  server.py
src/mcp_paper_agent/utils/: citations.py
